linked header to hero section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
 
     <!-- Hero -->
-    <hero>
+    <hero id="about">
         <div class="wrapper">
             <div class="left_hero">
                 <h1>Hi! I'm Steven Dong</h1>
