added portfolio section

--- a/index.html
+++ b/index.html
@@ -27,19 +27,31 @@
     </header>
 
     <!-- Hero -->
-    <hero id="about">
+    <section class="hero" id="about">
         <div class="wrapper">
             <div class="left_hero">
                 <h1>Hi! I'm Steven Dong</h1>
                 <p>I'm experienced in e-commerce operation in global firms
-                    and I'm currently looking for the next opportunity to extend my knowledge.
+                    and I'm currently looking for the next opportunity to extend my knowledge as a website developer.
                 </p>
             </div>
             <div class="right_hero">
                 <img src="./Assets/images/My project.png" alt="hero image" class="heroimg">
             </div>
         </div>
-    </hero>
+    </section>
+
+    <!-- Portfolio -->
+    <section class="portfolio" id="portfolio">
+        <div class="container_port">
+            <h1>My Portfolio</h1>
+            <p>These are the projects I have done so far!</p>
+            <div class="main_port">
+                <img src="./Assets/images/pre.png" class="portimg" alt="pre-work">
+                <img src="./Assets/images/project1.png" class="portimg" alt="project1">
+            </div>
+        </div>
+    </section>
 
 
 
