--- a/index.html
+++ b/index.html
@@ -15,22 +15,24 @@
 
     <!-- Header -->
     <header>
-        <h1 title="name">Steven Dong</h1>
-        <ul>
-            <li><a href="#about">About</a>
-            </li>
-            <li><a href="#portfolio">Portfolio</a>
-            </li>
-            <li><a href="#contact">Contact</a>
-            </li>
-        </ul>
+        <div class="container_header">
+            <h1 class="left_header" title="name">Steven Dong</h1>
+            <ul class="right_header">
+                <li><a href="#about">About</a>
+                </li>
+                <li><a href="#portfolio">Portfolio</a>
+                </li>
+                <li><a href="#contact">Contact</a>
+                </li>
+            </ul>
+        </div>
     </header>
 
     <!-- Hero -->
     <section class="hero" id="about">
         <div class="wrapper">
             <div class="left_hero">
-                <h1>Hi! I'm Steven Dong</h1>
+                <h2>Hi! I'm Steven Dong</h2>
                 <p>I'm experienced in e-commerce operation in global firms
                     and I'm currently looking for the next opportunity to extend my knowledge as a website developer.
                 </p>
@@ -44,16 +46,63 @@
     <!-- Portfolio -->
     <section class="portfolio" id="portfolio">
         <div class="container_port">
-            <h1>My Portfolio</h1>
+            <h2>My Portfolio</h2>
             <p>These are the projects I have done so far!</p>
             <div class="main_port">
-                <img src="./Assets/images/pre.png" class="portimg" alt="pre-work">
-                <img src="./Assets/images/project1.png" class="portimg" alt="project1">
+                <div class="portimg_container">
+                    <img src="./Assets/images/pre.png" class="portimg" alt="pre-work">
+                    <div class="overlay"><a href="https://stevendong2512.github.io/prework-study-guide/">Pre-work Assessment</a></div>
+                </div>
+                <div class="portimg_container">
+                    <img src="./Assets/images/project1.png" class="portimg" alt="project1">
+                    <div class="overlay"><a href="https://stevendong2512.github.io/week1/">SEO Optimisation</a></div>
+                </div>
+
             </div>
         </div>
     </section>
 
+    <!-- Contact -->
+    <section class="contact" id="contact">
+        <h2>Contact us</h2>
+        <p>
+            Leave your message here, and we will come back to you as soon as possible.
+        </p>
 
+        <div class="container_cont">
+            <form action="/action_page.php">
+                <div class="row">
+                    <div class="col-35">
+                        <label for="fname">First Name</label>
+                    </div>
+                    <div class="col-65">
+                        <input type="text" id="fname" name="firstname" placeholder="Given name...">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-35">
+                        <label for="lname">Last Name</label>
+                    </div>
+                    <div class="col-65">
+                        <input type="text" id="lname" name="lastname" placeholder="Last name...">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-35">
+                        <label for="subject">Message</label>
+                    </div>
+                    <div class="col-65">
+                        <textarea id="subject" name="subject" placeholder="Your message..."
+                            style="height:200px"></textarea>
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <input type="submit" value="Submit">
+                </div>
+            </form>
+        </div>
+    </section>
 
 </body>
 
