--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
             <div class="main_port">
                 <div class="portimg_container">
                     <img src="./Assets/images/pre.png" class="portimg" alt="pre-work">
-                    <div class="overlay"><a href="https://stevendong2512.github.io/prework-study-guide/">Pre-work Assessment</a></div>
+                    <div class="overlay"><a href="https://stevendong2512.github.io/prework-study-guide/">Pre-work
+                            Assessment</a></div>
                 </div>
                 <div class="portimg_container">
                     <img src="./Assets/images/project1.png" class="portimg" alt="project1">
@@ -104,6 +105,13 @@
         </div>
     </section>
 
+    <!-- Footer -->
+    <footer>
+        <h3 title="footer title">Made with ❤️️ by Steven Dong</h3>
+            <p title="copyright">
+                &copy; Steven Dong 2023
+            </p>
+    </footer>
 </body>
 
 </html>
