--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section class="hero" id="about">
         <div class="wrapper">
             <div class="left_hero">
-                <h2>Hi! I'm Steven Dong</h2>
+                <h2>Hi! I'm <a href="https://www.linkedin.com/in/steven-dong/">Steven Dong</a></h2>
                 <p>I'm experienced in e-commerce operation in global firms
                     and I'm currently looking for the next opportunity to extend my knowledge as a website developer.
                 </p>
