--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
             <h2>My Portfolio</h2>
             <p>These are the projects I have done so far!</p>
             <div class="main_port">
+                 <div class="portimg_container">
+                    <img src="./Assets/images/pre.png" class="portimg" alt="pre-work">
+                    <div class="overlay"><a href="https://cityreviwr.herokuapp.com/">CityReviwr</a></div>
+                     
                 <div class="portimg_container">
                     <img src="./Assets/images/pre.png" class="portimg" alt="pre-work">
                     <div class="overlay"><a href="https://stevendong2512.github.io/prework-study-guide/">Pre-work
